add_library(
  core
  common.cpp
  common.hpp
  file.cpp
  file.hpp
  http.cpp
  http.hpp
  network.hpp
  protocol.hpp
  router.cpp
  router.hpp
  server.cpp
  server.hpp
  tcp.cpp
  tcp.hpp
  websocket.cpp
  websocket.hpp
)

target_link_libraries(
  core
  PRIVATE
  spdlog
)

target_include_directories(
  core
  PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}
)
